netpol/pod-curl.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: curl
  name: curl
spec:
  containers:
    - image: curlimages/curl
      name: curl
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
